deploymnet.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  name: firstdeployment
  labels:
    name: firstdeploy

spec:
  replicas: 2
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - bhardwaj
  template: 
    metadata:
      name: pod
      labels:
        app: bhardwaj
    spec:
      containers:
       - name: testcont
         image: bhardwaj2803/k8s:bhardwaj
         ports:
         - containerPort: 443
         - containerPort: 80
         resources:
           requests:
             memory: 200M
           limits:
             memory: 500M

---
apiVersion: v1
kind: Service
metadata:
  name: html-svc
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: bhardwaj
---
