ingress-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # - path: /your-path-one(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: html-svc
      #       port:
      #         number: 80
      # - path: /your-path-two(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: html-svc
      #       port:
      #         number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: html-svc
            port:
              number: 80
